# bioart

./: .gitignore  .pre-commit-config.yaml  25_AI_Fundamental_laws.md  BIO_KWANTOWY_MANIFEST.md  CHANGELOG.md  CONTRIBUTING.md  DEBUG_SUMMARY.md  ENHANCEMENTS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  REFACTORING_SUMMARY.md  REPOSITORY_SUMMARY.md  SYSTEM_DEBUG_REPORT.md  TRANSLATOR_COMPLETE.md  TRANSLATOR_README.md  V1B3hR_BioArt_Core.py  bioart_cli.py  comprehensive_system_debug.py  dev-requirements.txt  highwaymap.md  manifesto.md  pyproject.toml  requirements.txt  roadmap.md  run_cosmic_simulation.py  run_full_simulation.py  run_tests.py  test_repo.py  unitymap.md
.github/workflows/: ci.yml  validation.yml
artifacts/: results.md
benchmarks/: __init__.py  benchmark_suite.py
benchmarks/results/: benchmark_1757897968.json  benchmark_1757898006.json
configs/: art_config.yaml  data_config.yaml  model_config.yaml
data/features/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: ADVANCED_FEATURES.md  AI_POC_VALIDATION_GUIDE.md  ARCHITECTURE.md  DEVELOPER_SETUP.md  FORMAT_SPEC.md  INSTRUCTION_SET.md  Makefile  ROADMAP.md  TRANSLATOR_GUIDE.md  UNITY_MAP_PROGRESS.md  USER_GUIDE.md  VALIDATION_CHECKLIST.md  advanced_test_results.txt  automated_testing_guide.md  comprehensive_test_summary.txt  readme.txt
examples/: advanced_features_demo.py  ai_ethics_demo.py  ai_poc_validation_demo.py  dna_demo.py  enhanced_bioart_demo.py  enhanced_bioartlan_demo.py  enhanced_features_demo.py  real_world_demo.py  refactored_demo.py  translator_demo.py
notebooks/: 01_data_exploration.ipynb
scripts/: download_data.py  generate_art.py  setup_environment.py
src/: __init__.py  bioart.py  bioart_language.py  bioartlan.py  bioartlan_language.py  dna_language.py  translator.py
src/adapters/: __init__.py  mock_adapter.py  ports.py  sandbox_adapter.py
src/art/: __init__.py  composition.py  palettes.py  prompts.py
src/biological/: __init__.py  error_correction.py  error_correction_plugins.py  genetic_tools.py  ml_sequence_optimizer.py  quantum_error_correction.py  realtime_monitoring.py  storage_systems.py  synthesis_systems.py  workflow_automation.py
src/compiler/: dna_compiler.py
src/core/: __init__.py  cache.py  config.py  cost.py  encoding.py  flexible_encoding.py  logging.py  streaming.py
src/data/: __init__.py  preprocessing.py
src/ethics/: __init__.py  ai_ethics_framework.py
src/models/: __init__.py  diffusion_lora.py  dna_embedding.py
src/parallel/: __init__.py  distributed_computing.py  dna_threading.py  parallel_executor.py
src/resilience/: __init__.py  circuit_breaker.py  concurrency.py  retry.py
src/utils/: __init__.py  bioinformatics.py  config.py  dna_format.py  file_manager.py  security.py  visualization.py
src/visualization/: __init__.py
src/vm/: instruction_set.py  virtual_machine.py
tests/: advanced_tests.py  stress_tests.py  test_adapters.py  test_advanced_biological_features.py  test_ai_ethics_framework.py  test_ai_poc_validation.py  test_cache.py  test_circuit_breaker.py  test_config.py  test_cost.py  test_distributed_computing_tls.py  test_e2e_pipeline.py  test_enhanced_features.py  test_logging.py  test_resilience.py  test_translator.py
tests/junit/: test-results.xml
tools/: dna_visualizer.py
